tests/invalid/dict_fromkeys_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {}
    out: dict[int, int] = d.fromkeys([1, 2, 3])


if __name__ == "__main__":
    run_case()
